--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ h3 {
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0.03em;
     text-align: left;
     color: #757575; 
 } 
@@ -126,6 +125,7 @@ h2 {
     font-weight: 500;
     line-height: 26px;
     letter-spacing: 0.03em;
+    cursor: pointer;
     
 }
 
